// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BaseModal > Snapshot Tests > matches snapshot for center modal 1`] = `
"<dialog data-v-5078ddf1="" data-testid="modal-dialog" closedby="none" class="grid grid-rows-[max-content_1fr] base-modal--opened rounded-xl min-w-[50vw] w-fit m-auto max-h-[75vh] my-[12.5vh] @container/modal relative">
  <div data-v-5078ddf1="" class="base-modal__header" data-testid="modal-header">
    <!--v-if--><button data-v-5078ddf1="" type="button" class="base-modal__close" data-testid="modal-close-button" aria-label="modal.close">
      <div data-v-5078ddf1="" data-testid="unicon" aria-label="multiply" height="18"></div>
    </button>
  </div>
  <div data-v-5078ddf1="" data-testid="modal-content"></div>
  <!--v-if-->
</dialog>"
`;

exports[`BaseModal > Snapshot Tests > matches snapshot for center wide modal 1`] = `
"<dialog data-v-5078ddf1="" data-testid="modal-dialog" closedby="none" class="grid grid-rows-[max-content_1fr] base-modal--opened rounded-xl min-w-[80vw] w-fit m-auto max-h-[90vh] @container/modal relative">
  <div data-v-5078ddf1="" class="base-modal__header" data-testid="modal-header">
    <!--v-if--><button data-v-5078ddf1="" type="button" class="base-modal__close" data-testid="modal-close-button" aria-label="modal.close">
      <div data-v-5078ddf1="" data-testid="unicon" aria-label="multiply" height="18"></div>
    </button>
  </div>
  <div data-v-5078ddf1="" data-testid="modal-content"></div>
  <!--v-if-->
</dialog>"
`;

exports[`BaseModal > Snapshot Tests > matches snapshot for left modal 1`] = `
"<dialog data-v-5078ddf1="" data-testid="modal-dialog" closedby="none" class="grid grid-rows-[max-content_1fr] base-modal--opened @container/modal relative">
  <div data-v-5078ddf1="" class="base-modal__header" data-testid="modal-header">
    <!--v-if--><button data-v-5078ddf1="" type="button" class="base-modal__close" data-testid="modal-close-button" aria-label="modal.close">
      <div data-v-5078ddf1="" data-testid="unicon" aria-label="multiply" height="18"></div>
    </button>
  </div>
  <div data-v-5078ddf1="" data-testid="modal-content"></div>
  <!--v-if-->
</dialog>"
`;

exports[`BaseModal > Snapshot Tests > matches snapshot for right modal 1`] = `
"<dialog data-v-5078ddf1="" data-testid="modal-dialog" closedby="none" class="grid grid-rows-[max-content_1fr] base-modal--opened min-w-[40vw] w-fit h-screen max-h-screen mr-0 my-0 @container/modal relative">
  <div data-v-5078ddf1="" class="base-modal__header" data-testid="modal-header">
    <!--v-if--><button data-v-5078ddf1="" type="button" class="base-modal__close" data-testid="modal-close-button" aria-label="modal.close">
      <div data-v-5078ddf1="" data-testid="unicon" aria-label="multiply" height="18"></div>
    </button>
  </div>
  <div data-v-5078ddf1="" data-testid="modal-content"></div>
  <!--v-if-->
</dialog>"
`;
